# lintception

./: .lintception  LICENSE  README.md  ideas.txt  main.py  pyproject.toml  tests.py
.github/workflows/: lintception.yml  run-tests.yml
lintception/: Utils.py  linters.py  main.py  my_linter.py
