[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.8"
name = "lintception"
version = "1.0.2"
authors = [
  { name="John Doknjas", email="jdoknjas@sfu.ca" },
]
description = "Runs a few popular linters in series (mypy, vulture, vermin, pylint), and also does some other checks."
keywords = ["linter", "mypy", "vulture", "vermin", "pylint", "testing", "linting", "lintception"]
dependencies = [
  "mypy",
  "vulture",
  "vermin",
  "pylint",
]
readme = "README.md"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Operating System :: OS Independent",
]

[project.scripts]
lintception = "lintception:main.main"

[project.urls]
Homepage = "https://github.com/johndoknjas/lintception"

[tool.setuptools]
packages = ["lintception"]